# cpp-cmake-vcpkg-emscripten-template

./: .gitignore  CMakePresets.json  CMakelists.txt  package-lock.json  package.json  readme.md  vcpkg.json
cmake/: buildOptions.cmake
examples/: CMakelists.txt
examples/basic_SDL2/: CMakelists.txt  main.cc
examples/work_with_images_SDL2/: CMakeLists.txt  main.cc
